--- a/backend/Compass.Api/appsettings.json
+++ b/backend/Compass.Api/appsettings.json
@@ -13,5 +13,14 @@
     "Audience": "SecureApiUSer",
     "Issuer": "SecureApi"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "User": "toha229@ukr.net",
+    "Password": "2ndaEGKyBtAC8IW0",
+    "SMTP": "smtp.ukr.net",
+    "PORT": 465
+  },
+  "HostSettings": {
+    "URL": "https://localhost:3000"
+  }
 }
